# obs_nickel

./: .gitignore  exposures.txt  pyproject.toml  setup.cfg
camera/: nickel.yaml
configs/: astrometry_overrides.py  characterizeImage_config.py  filter_map.py  psf_simple.py
pipelines/: ProcessCcd.yaml  convert_refcat.yaml  findDefects.yaml  nickelFlatNoDark.yaml  nickelIsr.yaml  nickelIsrOnly.yaml  nickel_cp_and_process.yaml  nickel_process_ccd.sh  nickel_run.sh  nickel_run_new.sh  processCCDNickel.yaml  processSingleFrame.yaml
python/lsst/obs/nickel/: __init__.py  _instrument.py  camera.py  camera.yaml  filters.py  nickelFilters.py  rawFormatter.py  translator.py  translators.py  visitInfo.py
python/obs_nickel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/defects/: README.md  make_defects_from_flats.py  nickel_defects_rects_20250819T205902Z.csv  nickel_defects_rects_20250824T191605Z.csv
tests/: test_formatter.py  test_ingest.py  test_instrument.py  test_translator.py
