[metadata]
name = obs-nickel
version = 0.1.0
description = LSST obs package for the Nickel telescope
author = Dan Gause

[options]
packages = find:
install_requires =
    astro_metadata_translator>=0.11.0
    astropy

[options.packages.find]
where = python

[options.entry_points]
astro_metadata_translator.translators =
    Nickel = lsst.obs.nickel.translator:NickelTranslator
